--- a/duvidas.html
+++ b/duvidas.html
@@ -52,54 +52,56 @@
             <li> <a class="cincu" href=""><h2></h2></a> </li>
         </ul>
     </div>
-    <div class="fac">
-        <h1>perguntas frequentes</h1>
-        <div class="pesquisa">
-            <h2 class="tt">digite sua duvida abaixo</h2>
-            <input class="pesquisar" id="searchbar" onkeyup="search_fichas()" type="text" name="search" placeholder="Procurar">
-            <div class="list">
-                <div class="duvidas">
-                    <a href="#" class="duvida">
-                      <h2>quando vai começar?</h2>
-                      <h3>o enigma irá começar segunda-feira às 22Hrs</h3>
-                    </a>
+    <div class="geral">
+        <div class="fac">
+            <h1>perguntas frequentes</h1>
+            <div class="pesquisa">
+                <h2 class="tt">digite sua duvida abaixo</h2>
+                <input class="pesquisar" id="searchbar" onkeyup="search_fichas()" type="text" name="search" placeholder="Procurar">
+                <div class="list">
+                    <div class="duvidas">
+                        <a href="#" class="duvida">
+                          <h2>quando vai começar?</h2>
+                          <h3>o enigma irá começar segunda-feira às 22Hrs</h3>
+                        </a>
+                    </div>
+                    <div class="duvidas">
+                        <a href="#" class="duvida">
+                          <h2>quando vai lançar as dicas?</h2>
+                          <h3>as dicas iram ser lançadas todas segundas às 22Hrs</h3>
+                        </a>
+                    </div>
+                    <div class="duvidas">
+                        <a href="#" class="duvida">
+                          <h2>vai ter alguma premiação?</h2>
+                          <h3>irá ter uma premiação, mas ainda não foi decidida</h3>
+                        </a>
+                    </div>
+                    <div class="duvidas">
+                        <a href="#" class="duvida">
+                          <h2>qual é o tema dos enigmas?</h2>
+                          <h3>o enigma não tem um tema predefinido, ou seja pode ser de qualquer tema</h3>
+                        </a>
+                    </div>
+                    <div class="duvidas">
+                        <a href="#" class="duvida">
+                          <h2>onde as dicas vão ficar?</h2>
+                          <h3>as dicas vão ficar espalhadas pela escolas </h3>
+                        </a>
+                    </div>
+                    <div class="duvidas">
+                        <a href="#" class="duvida">
+                          <h2>o que é a "ajuda"?</h2>
+                          <h3>a "ajuda" é um ajuda que vamos dar para quem não solucionar o enigma, nela vai conter um dica de onde procurar sobre o assunto.</h3>
+                        </a>
+                  </div>
                 </div>
-                <div class="duvidas">
-                    <a href="#" class="duvida">
-                      <h2>quando vai lançar as dicas?</h2>
-                      <h3>as dicas iram ser lançadas todas segundas às 22Hrs</h3>
-                    </a>
+                <br><br><br><br>
+                <div class="op2">
+                    <h1>entre em contato conosco</h1>
+                    <h2 class="caso">caso sua duvida não esteja acima, clique no botão abaixo para entrar em contato</h2>
+                    <a class="butaum" href="./entre-em-contato.html">Clique aqui</a>
                 </div>
-                <div class="duvidas">
-                    <a href="#" class="duvida">
-                      <h2>vai ter alguma premiação?</h2>
-                      <h3>irá ter uma premiação, mas ainda não foi decidida</h3>
-                    </a>
-                </div>
-                <div class="duvidas">
-                    <a href="#" class="duvida">
-                      <h2>qual é o tema dos enigmas?</h2>
-                      <h3>o enigma não tem um tema predefinido, ou seja pode ser de qualquer tema</h3>
-                    </a>
-                </div>
-                <div class="duvidas">
-                    <a href="#" class="duvida">
-                      <h2>onde as dicas vão ficar?</h2>
-                      <h3>as dicas vão ficar espalhadas pela escolas </h3>
-                    </a>
-                </div>
-                <div class="duvidas">
-                    <a href="#" class="duvida">
-                      <h2>o que é a "ajuda"?</h2>
-                      <h3>a "ajuda" é um ajuda que vamos dar para quem não solucionar o enigma, nela vai conter um dica de onde procurar sobre o assunto.</h3>
-                    </a>
-              </div>
-            </div>
-            <br><br><br><br>
-            <div class="op2">
-                <h1>entre em contato conosco</h1>
-                <h2 class="caso">caso sua duvida não esteja acima, clique no botão abaixo para entrar em contato</h2>
-                <a class="butaum" href="./entre-em-contato.html">Clique aqui</a>
             </div>
         </div>
     </div>
