--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <li> <a class="um"    href="./index.html"><h2>inicio</h2></a> </li>
             <li> <a class="dois"  href="./dica-semanal.html"><h2>dicas</h2></a> </li>
             <li> <a class="tres"  href="./times.html"><h2>times</h2></a> </li>
-            <li> <a class="four"  href="./index.html"><h2>duvidas</h2></a> </li>
+            <li> <a class="four"  href="./duvidas.html"><h2>duvidas</h2></a> </li>
             <li> <a class="cincu" href="./regras.html"><h2>regras</h2></a> </li>
             <li> <a class="seis" href="./entre-em-contato.html"><h2>contato</h2></a> </li>
             <li> <a class="cincu" href=""><h2></h2></a> </li>
