--- a/dica.html
+++ b/dica.html
@@ -10,7 +10,7 @@
     <div class="geral">
         <h1>A dica da semana é:</h1>
         <div class="dica">
-
+            <h2>a dica semanal será lançada às 22Hrs</h2>
         </div>
         <div class="enviar">
             <h1>Clique no botão abaixo para enviar a dica</h1>
@@ -33,6 +33,14 @@
             border-radius: 20px;
             min-height: 300px;
             min-width: 350px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .dica h2 {
+            margin: 15px;
         }
 
         .enviar {
