--- a/dica.html
+++ b/dica.html
@@ -10,7 +10,8 @@
     <div class="geral">
         <h1>A dica da semana é:</h1>
         <div class="dica">
-            <h2>a dica semanal será lançada às 22Hrs</h2>
+            <h2>Em um local de estudo e pesquisa, esta formula você irá encontrar:</h2>
+            <img src="./img/3lei.png">
         </div>
         <div class="enviar">
             <h1>Clique no botão abaixo para enviar a dica</h1>
