--- a/dica.html
+++ b/dica.html
@@ -11,7 +11,7 @@
         <h1>A dica da semana é:</h1>
         <div class="dica">
             <h2>Em um local de estudo e pesquisa, esta formula você irá encontrar:</h2>
-            <img src="./img/3lei.png">
+            <img src="./3lei.png">
         </div>
         <div class="enviar">
             <h1>Clique no botão abaixo para enviar a dica</h1>
